k3s_cluster/base/default/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: default
  labels:
    app: main-traefik
  annotations:
    metallb.io/address-pool: public-ips
    metallb.io/loadBalancerIPs: 192.168.1.2
spec:
  type: LoadBalancer
  selector:
    app: main-traefik
  loadBalancerIP: 192.168.1.2
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
    - protocol: TCP
      port: 443
      name: websecure
      targetPort: 443
  # externalTrafficPolicy: Local

---
apiVersion: v1
kind: Service
metadata:
  name: service-dashboard
  namespace: default
  labels:
    app: main-traefik
spec:
  type: ClusterIP
  selector:
    app: main-traefik
  ports:
    - protocol: TCP
      name: dashboard
      port: 8080
      targetPort: 2280
    - protocol: TCP
      name: metrics
      port: 8082
      targetPort: 2282
