k3s_cluster/base/default/traefik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: default
  labels:
    app: main-traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.main.home`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      middlewares:
        - name: main-middleware-auth-sso
      services:
        - name: api@internal
          kind: TraefikService
  #tls: {}
